created api route for overview task and activity logs, UI changes made settings reusable, created clock bruh and promoted date formatter to universal date time utility

--- a/src/assets/styles/organisms/calendar.overwrite.styles.css
+++ b/src/assets/styles/organisms/calendar.overwrite.styles.css
@@ -1,5 +1,5 @@
 /* ant design calendar overwrite default */
 
-.ant-picker-calendar.ant-picker-calendar-full .ant-picker-calendar-date-content {
+.task-overview .ant-picker-calendar.ant-picker-calendar-full .ant-picker-calendar-date-content {
     height: 25px;
 }
